# whisper_api

./: .gitignore  README.md  pyproject.toml
whisper_api/: app.py  bun.lockb  index.html  model.py  package.json
whisper_api/src/: App.vue  main.js  style.css
