[tool.poetry]
name = "whisper-api"
version = "0.1.0"
description = ""
authors = ["Rodolfo De Nadai <rdenadai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.27.1"
uvloop = "^0.19.0"
orjson = "^3.9.15"
transformers = "^4.38.1"
torch = "^2.2.1"
accelerate = "^0.27.2"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
